--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,8 @@
 name: Build & Deploy Flappy Capy
+
 on:
   push:
-    branches: [ main ]   # change to master if your default branch is master
+    branches: [ main ]   # change if your default branch is different
 
 permissions:
   contents: read
@@ -20,25 +21,38 @@ jobs:
         with:
           python-version: '3.10'
 
-      # Install pygbag (latest from GitHub)
-      - name: Install pygbag
+      - name: Install pygbag (latest from GitHub)
         run: |
           python -m pip install --upgrade pip
           python -m pip install "git+https://github.com/pygame-web/pygbag.git"
 
-      # Install Emscripten toolchain for WebAssembly
       - name: Set up Emscripten (emsdk)
         uses: mymindstorm/setup-emsdk@v14
         with:
           version: latest
 
-      # Build the web bundle (creates build/web/* including .wasm/.data/.js)
+      # 👇 Force pygbag to build for the web (not APK)
+      - name: Create pygbag.ini
+        run: |
+          cat > pygbag.ini <<'EOF'
+          [project]
+          name = capi
+          source = .
+          entry = main.py
+          backend = pygame
+          platform = web
+
+          [DEPENDENCIES]
+          ignorefiles =
+          ignoredirs  =
+          EOF
+
       - name: Build with pygbag
         run: |
           python -m pygbag main.py
           ls -la build/web
 
-      # Optional: patch the generated splash to auto-start on mobile
+      # Optional: auto-start patch to skip green overlay on mobile
       - name: Auto-start patch (skip green overlay)
         run: |
           cat >> build/web/index.html <<'PATCH'
@@ -48,14 +62,23 @@ jobs:
               const btn = document.getElementById("run") || document.querySelector(".run, #start, .start, button");
               if (btn) try { btn.click(); } catch(e) {}
             };
-            // try a few times in case elements mount late
             clickRun(); setTimeout(clickRun, 150); setTimeout(clickRun, 300);
           });
           </script>
           PATCH
 
-      # Upload site artifact for GitHub Pages
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: build/web
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deploy.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deploy
+        uses: actions/deploy-pages@v4
