--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Build & Deploy Flappy Capy
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main ]   # change to master if your default branch is master
 
 permissions:
   contents: read
@@ -21,46 +21,78 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install pygbag
+      - name: Install pygbag (latest from GitHub)
         run: |
           python -m pip install --upgrade pip
           python -m pip install "git+https://github.com/pygame-web/pygbag.git"
 
-      - name: Set up Emscripten
+      - name: Set up Emscripten (emsdk)
         uses: mymindstorm/setup-emsdk@v14
         with:
           version: latest
 
-      - name: Build with pygbag
+      - name: Create pygbag.ini (force web build)
         run: |
-          python -m pygbag main.py &
-          PID=$!
+          printf "%s\n" \
+          "[project]" \
+          "name = capi" \
+          "source = ." \
+          "entry = main.py" \
+          "backend = pygame" \
+          "platform = web" \
+          "" \
+          "[DEPENDENCIES]" \
+          "ignorefiles =" \
+          "ignoredirs  =" > pygbag.ini
+
+      - name: Ensure build dir exists
+        run: mkdir -p build/web
+
+      # Start pygbag, wait for .wasm to appear, then stop server
+      - name: Build with pygbag (timeout + wait for files)
+        run: |
+          set -e
+          python -m pygbag main.py & PID=$!
+
+          # wait up to ~3 minutes for the web bundle to appear
           for i in $(seq 1 90); do
             if [ -f build/web/index.html ] && ls build/web/*.wasm >/dev/null 2>&1; then
               echo "✅ Web build detected."
               break
             fi
-            echo "⏳ Waiting... $i"
+            echo "⏳ Waiting for build... ($i/90)"
             sleep 2
           done
-          kill $PID || true
-          ls -la build/web
 
-      - name: Auto-start patch (skip overlay)
+          # stop the background server if still running
+          kill $PID || true
+
+          echo "Contents of build/web:"
+          ls -la build/web || (echo "❌ build/web missing" && exit 1)
+
+      # Append a small script to auto-click the "Run/Start" button on mobile
+      - name: Auto-start patch (skip green overlay)
         run: |
-          if [ -f build/web/index.html ]; then
-            cat >> build/web/index.html <<'PATCH'
-<script>
-window.addEventListener("load", () => {
-  const clickRun = () => {
-    const btn = document.getElementById("run") || document.querySelector(".run, #start, .start, button");
-    if (btn) try { btn.click(); } catch(e) {}
-  };
-  clickRun(); setTimeout(clickRun, 150); setTimeout(clickRun, 300);
-});
-</script>
-PATCH
-          fi
+          python - <<'PY'
+          import os, io
+          p = "build/web/index.html"
+          if os.path.isfile(p):
+              script = """<script>
+          window.addEventListener("load", () => {
+            const clickRun = () => {
+              const btn = document.getElementById("run") || document.querySelector(".run, #start, .start, button");
+              if (btn) { try { btn.click(); } catch(e) {} }
+            };
+            clickRun(); setTimeout(clickRun, 150); setTimeout(clickRun, 300);
+          });
+          </script>
+          """
+              with io.open(p, "a", encoding="utf-8") as f:
+                  f.write("\\n" + script + "\\n")
+              print("Patched:", p)
+          else:
+              print("Skipping patch; file not found:", p)
+          PY
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
