--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Build & Deploy Flappy Capy
 
 on:
   push:
-    branches: [ main ]   # change to master if your default branch is master
+    branches: [ main ]
 
 permissions:
   contents: read
@@ -48,13 +48,10 @@ jobs:
       - name: Ensure build dir exists
         run: mkdir -p build/web
 
-      # Start pygbag, wait for .wasm to appear, then stop server
       - name: Build with pygbag (timeout + wait for files)
         run: |
           set -e
           python -m pygbag main.py & PID=$!
-
-          # wait up to ~3 minutes for the web bundle to appear
           for i in $(seq 1 90); do
             if [ -f build/web/index.html ] && ls build/web/*.wasm >/dev/null 2>&1; then
               echo "✅ Web build detected."
@@ -63,41 +60,53 @@ jobs:
             echo "⏳ Waiting for build... ($i/90)"
             sleep 2
           done
-
-          # stop the background server if still running
           kill $PID || true
+          ls -la build/web
 
-          echo "Contents of build/web:"
-          ls -la build/web || (echo "❌ build/web missing" && exit 1)
-
-      # Append a small script to auto-click the "Run/Start" button on mobile
-      - name: Auto-start patch (skip green overlay)
+      # Optional: hide pygbag corner/overlay & auto-start inside the game
+      - name: Patch game HTML (autostart + hide corner)
         run: |
           python - <<'PY'
           import os, io
           p = "build/web/index.html"
           if os.path.isfile(p):
-              script = """<script>
+              patch = """
+          <style>
+            /* hide common top-right overlays/badges that pygbag/emscripten templates add */
+            #github-corner, .corner, .top-right, .badge, .toolbar, a[href*="github.com"]{
+              display:none !important; visibility:hidden !important;
+            }
+          </style>
+          <script>
           window.addEventListener("load", () => {
             const clickRun = () => {
               const btn = document.getElementById("run") || document.querySelector(".run, #start, .start, button");
-              if (btn) { try { btn.click(); } catch(e) {} }
+              try { if (btn) btn.click(); } catch(e){}
             };
-            clickRun(); setTimeout(clickRun, 150); setTimeout(clickRun, 300);
+            clickRun(); setTimeout(clickRun,150); setTimeout(clickRun,300);
           });
           </script>
-          """
+              """
               with io.open(p, "a", encoding="utf-8") as f:
-                  f.write("\\n" + script + "\\n")
+                  f.write("\\n"+patch+"\\n")
               print("Patched:", p)
           else:
               print("Skipping patch; file not found:", p)
           PY
 
+      # Prepare a site/ folder with wrapper at root and game under /game
+      - name: Prepare site folder
+        run: |
+          mkdir -p site/game
+          cp -r build/web/* site/game/
+          # Ensure wrapper uses /game/index.html
+          sed -i 's|build/web/index.html|game/index.html|g' index.html || true
+          cp index.html site/index.html
+
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: build/web
+          path: site
 
   deploy:
     needs: build
