--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -126,18 +126,10 @@ jobs:
           # Ensure wrapper uses /game/index.html (update if your wrapper already exists)
           if [ -f "index.html" ]; then
             sed -i 's|build/web/index.html|game/index.html|g' index.html || true
-            sed -i 's|GAME_URL\\s*=\\s*".*"|const GAME_URL = "game/index.html";|g' index.html || true
+            sed -i 's|GAME_URL\s*=.*|const GAME_URL = "game/index.html";|g' index.html || true
             cp index.html site/index.html
           else
-            # Fallback minimal wrapper if none present
-            cat > site/index.html <<'HTML'
-            <!DOCTYPE html>
-            <html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-            <title>Flappy Capy 🐹</title></head>
-            <body style="margin:0;display:flex;align-items:center;justify-content:center;min-height:100vh;background:#111;color:#fff">
-              <iframe src="game/index.html" style="width:420px;height:640px;border:0;border-radius:12px;background:#000" allow="autoplay; fullscreen"></iframe>
-            </body></html>
-            HTML
+            echo '<!DOCTYPE html><html><head><meta charset="utf-8"><title>Flappy Capy 🐹</title></head><body style="margin:0;display:flex;align-items:center;justify-content:center;min-height:100vh;background:#111;color:#fff"><iframe src="game/index.html" style="width:420px;height:640px;border:0;border-radius:12px;background:#000" allow="autoplay; fullscreen"></iframe></body></html>' > site/index.html
           fi
 
       - name: Upload Pages artifact
@@ -155,3 +147,4 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deploy
         uses: actions/deploy-pages@v4
+
