--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,9 +17,6 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      GAME_DIR: .         # change if main.py is in a subfolder
-      MAIN_FILE: main.py  # change if your entry file has a different name
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -29,39 +26,100 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install pygbag
+      - name: Install pygbag (latest from GitHub)
         run: |
           python -m pip install --upgrade pip
-          pip install pygbag
+          python -m pip install "git+https://github.com/pygame-web/pygbag.git"
 
-      - name: Build with pygbag (WASM bundle)
-        run: |
-          cd "$GAME_DIR"
-          python -m pygbag --build "$MAIN_FILE"
-          echo "--- build dir ---"; ls -la build || true
-          echo "--- build/web ---"; ls -la build/web || (echo "ERROR: build/web missing" && exit 1)
+      - name: Set up Emscripten (emsdk)
+        uses: mymindstorm/setup-emsdk@v14
+        with:
+          version: latest
 
-      - name: Copy static assets into build (images/audio/fonts)
+      - name: Create pygbag.ini (force web build)
         run: |
-          cd "$GAME_DIR"
-          rsync -av --ignore-existing \
-            --include="*/" \
-            --include="*.png" --include="*.jpg" --include="*.jpeg" --include="*.gif" \
-            --include="*.mp3" --include="*.m4a" --include="*.ogg" --include="*.wav" \
-            --include="*.ttf" --include="*.otf" --include="*.json" --include="*.txt" \
-            --exclude="*" . build/web/
+          printf "%s\n" \
+          "[project]" \
+          "name = capi" \
+          "source = ." \
+          "entry = main.py" \
+          "backend = pygame" \
+          "platform = web" \
+          "" \
+          "[DEPENDENCIES]" \
+          "ignorefiles = *.mp3 *.m4a" \
+          "ignoredirs  =" > pygbag.ini
+
+      # Remove formats pygbag forbids for web builds
+      - name: Remove MP3/M4A (pygbag forbids on web)
+        run: |
+          find . -maxdepth 1 -type f \( -name "*.mp3" -o -name "*.m4a" \) -print -delete || true
+
+      - name: Ensure build dir exists
+        run: mkdir -p build/web
+
+      - name: Build with pygbag (timeout + wait for files)
+        run: |
+          set -e
+          python -m pygbag main.py & PID=$!
+          for i in $(seq 1 90); do
+            if [ -f build/web/index.html ] && ls build/web/*.wasm >/dev/null 2>&1; then
+              echo "✅ Web build detected."
+              break
+            fi
+            echo "⏳ Waiting for build... ($i/90)"
+            sleep 2
+          done
+          kill $PID || true
+          ls -la build/web
+
+      # Optional cosmetic patch
+      - name: Patch game HTML (autostart + hide status text)
+        run: |
+          python - <<'PY'
+          import os, io
+          p = "build/web/index.html"
+          if os.path.isfile(p):
+              patch = """
+          <style>
+            #output, #status, #spinner { display:none !important; visibility:hidden !important; }
+            #github-corner, .corner, .top-right, .badge, .toolbar, a[href*="github.com"]{
+              display:none !important; visibility:hidden !important;
+            }
+          </style>
+          <script>
+          window.addEventListener("load", () => {
+            const clickRun = () => {
+              const btn = document.getElementById("run") || document.querySelector(".run, #start, .start, button");
+              try { if (btn) btn.click(); } catch(e){}
+            };
+            clickRun(); setTimeout(clickRun,150); setTimeout(clickRun,300);
+          });
+          </script>
+              """
+              with io.open(p, "a", encoding="utf-8") as f:
+                  f.write("\n"+patch+"\n")
+              print("Patched:", p)
+          else:
+              print("Skipping patch; file not found:", p)
+          PY
 
       - name: Prepare site folder
         run: |
           mkdir -p site/game
-          cp -r "$GAME_DIR/build/web/"* site/game/
-          # simple redirect landing page to /game/
-          cat > site/index.html <<'HTML'
-          <!doctype html><meta charset="utf-8">
-          <meta http-equiv="refresh" content="0; url=game/">
-          <title>Flappy Capy</title>
-          <a href="game/">Click here if you are not redirected…</a>
-          HTML
+          cp -r build/web/* site/game/
+          # Use /game/index.html as the entry page; if no root index.html, make a redirect.
+          if [ -f index.html ]; then
+            sed -i 's|build/web/index.html|game/index.html|g' index.html || true
+            cp index.html site/index.html
+          else
+            cat > site/index.html <<'HTML'
+            <!doctype html><meta charset="utf-8">
+            <meta http-equiv="refresh" content="0; url=game/">
+            <title>Flappy Capy</title>
+            <a href="game/">Click here if you are not redirected…</a>
+            HTML
+          fi
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
@@ -73,10 +131,11 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      url: ${{ steps.deploy.outputs.page_url }}
     permissions:
       pages: write
       id-token: write
     steps:
-      - id: deployment
+      - name: Deploy to GitHub Pages
+        id: deploy
         uses: actions/deploy-pages@v4
