--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,4 @@
 name: Build & Deploy Flappy Capy
-
 on:
   push:
     branches: [ main ]
@@ -10,128 +9,48 @@ permissions:
   pages: write
   id-token: write
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: '3.11'
 
-      - name: Install pygbag (latest from GitHub)
+      - name: Install pygbag
+        run: python -m pip install --upgrade pygbag
+
+      - name: Build web with auto-start (ume_block=0)
+        run: python -m pygbag --ume_block 0 --build main.py
+
+      - name: Inject forwarder.js into build/web/index.html
+        shell: bash
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install "git+https://github.com/pygame-web/pygbag.git"
-
-      - name: Set up Emscripten (emsdk)
-        uses: mymindstorm/setup-emsdk@v14
-        with:
-          version: latest
-
-      - name: Create pygbag.ini (force web build, ignore mp3/m4a)
-        run: |
-          printf "%s\n" \
-          "[project]" \
-          "name = capi" \
-          "source = ." \
-          "entry = main.py" \
-          "backend = pygame" \
-          "platform = web" \
-          "" \
-          "[DEPENDENCIES]" \
-          "ignorefiles = *.mp3 *.m4a" \
-          "ignoredirs  =" > pygbag.ini
-
-      # Belt & suspenders: also remove mp3/m4a so pygbag can't see them
-      - name: Remove MP3/M4A (pygbag forbids these on web)
-        run: |
-          find . -maxdepth 1 -type f \( -name "*.mp3" -o -name "*.m4a" \) -print -delete || true
-
-      - name: Ensure build dir exists
-        run: mkdir -p build/web
-
-      - name: Build with pygbag (timeout + wait for files)
-        run: |
-          set -e
-          python -m pygbag main.py & PID=$!
-          for i in $(seq 1 90); do
-            if [ -f build/web/index.html ] && ls build/web/*.wasm >/dev/null 2>&1; then
-              echo "✅ Web build detected."
-              break
-            fi
-            echo "⏳ Waiting for build... ($i/90)"
-            sleep 2
-          done
-          kill $PID || true
-          echo "--- build dir ---"; ls -la build || true
-          echo "--- build/web ---"; ls -la build/web || true
-
-      # Optional cosmetic patch (safe): hide status text/ui chrome
-      - name: Patch game HTML (autostart + hide status text)
-        run: |
-          python - <<'PY'
-          import os, io
-          p = "build/web/index.html"
-          if os.path.isfile(p):
-              patch = """
-          <style>
-            #output, #status, #spinner { display:none !important; visibility:hidden !important; }
-            #github-corner, .corner, .top-right, .badge, .toolbar, a[href*="github.com"]{
-              display:none !important; visibility:hidden !important;
-            }
-          </style>
-          <script>
-          window.addEventListener("load", () => {
-            const clickRun = () => {
-              const btn = document.getElementById("run") || document.querySelector(".run, #start, .start, button");
-              try { if (btn) btn.click(); } catch(e){}
-            };
-            clickRun(); setTimeout(clickRun,150); setTimeout(clickRun,300);
-          });
-          </script>
-              """
-              with io.open(p, "a", encoding="utf-8") as f:
-                  f.write("\n"+patch+"\n")
-              print("Patched:", p)
-          else:
-              print("Skipping patch; file not found:", p)
-          PY
-
-      - name: Prepare site folder
-        run: |
-          mkdir -p site/game
-          cp -r build/web/* site/game/
-          # If you have a root index.html, rewrite it to point at /game/
-          if [ -f index.html ]; then
-            sed -i 's|build/web/index.html|game/index.html|g' index.html || true
-            cp index.html site/index.html
+          F="build/web/index.html"
+          TAG='<script src="../../forwarder.js"></script>'
+          if ! grep -q 'forwarder.js' "$F"; then
+            awk -v tag="$TAG" '
+              /<\/body>/ && !done { print "  <!-- injected: forwarder.js -->\n  " tag; done=1 }
+              { print }
+            ' "$F" > "$F.tmp" && mv "$F.tmp" "$F"
+            echo "Injected forwarder.js"
           else
-            echo '<!doctype html><meta charset="utf-8"><meta http-equiv="refresh" content="0; url=game/"><title>Flappy Capy</title><a href="game/">Click here if you are not redirected…</a>' > site/index.html
+            echo "forwarder already injected"
           fi
 
-      - name: Upload Pages artifact
+      - name: Upload site (publish repo root so index.html + build/ are served)
         uses: actions/upload-pages-artifact@v3
         with:
-          path: site
+          path: .
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     environment:
       name: github-pages
-      url: ${{ steps.deploy.outputs.page_url }}
-    permissions:
-      pages: write
-      id-token: write
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - name: Deploy to GitHub Pages
-        id: deploy
+      - id: deployment
         uses: actions/deploy-pages@v4
