--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,11 @@ jobs:
         run: python -m pip install --upgrade pygbag
 
       - name: Build web with auto-start (ume_block=0)
+        working-directory: game
         run: python -m pygbag --ume_block 0 --build main.py
 
       - name: Inject forwarder.js into build/web/index.html
+        working-directory: game
         shell: bash
         run: |
           F="build/web/index.html"
@@ -40,7 +42,27 @@ jobs:
             echo "forwarder already injected"
           fi
 
-      - name: Upload site (publish repo root so index.html + build/ are served)
+      # Optional: cache-bust the iframe src inside /game/index.html
+      - name: Cache-buster (?v=timestamp) in game/index.html
+        shell: bash
+        run: |
+          python - "$@" <<'PY'
+          import re, time, pathlib
+          p = pathlib.Path("game/index.html")
+          if not p.exists():
+              print("game/index.html not found; skipping")
+              raise SystemExit(0)
+          s = p.read_text(encoding="utf-8")
+          new = re.sub(r'(build/web/index\.html)(?:\?v=[^"\'\s]*)?', r'\1?v=%d' % int(time.time()), s)
+          if new != s:
+              p.write_text(new, encoding="utf-8")
+              print("Cache-buster updated in game/index.html")
+          else:
+              print("No build/web reference found; skipping")
+          PY
+
+      # Publish the whole repo so /game and root files (CNAME) are served
+      - name: Upload site
         uses: actions/upload-pages-artifact@v3
         with:
           path: .
